--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,7 +1,25 @@
 body {
   margin: 0px;
+ 
 }
-
+.title-form{
+  color: white !important;
+  text-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+  
+}
+.bg-image{
+  background-image: url(../images/bg1.jpg);
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+.btn-form{
+  background-color:#614c3f;
+  color: white;
+  border-radius: 5px;
+  border: none;
+}
 .container {
   width: 100vw;
   height: 100vh;
@@ -11,26 +29,64 @@ body {
   justify-content: center;
   align-items: center
 }
-
 .box {
   width: 300px;
   height: 300px;
   background: #f4f4f4;
   border-radius: 8px;
-
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
 .login-inputs {
-  margin-top: 24px;
   display: flex;
-  width: 400px;
+  font-size: 18px;
   flex-direction: column;
 }
-
+.login-inputs input{
+  border-radius: 8px;
+}
+.form-container{
+  background-image: -webkit-linear-gradient( -4deg, #bd6638 28%, #da9772 81%, #c09778 100% ) !important;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+  width: 450px;
+  height: 300spx;
+  padding: 50px 30px;
+}
+.form-container label{
+  color: white;
+  font-size: 18px;
+}
 .entrar-input {
   margin-top: 16px;
   width: 200px;
+}
+.form-login{
+  padding: 200px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-new-cifra{
+  padding: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.new-cifra-container{
+  background-image: -webkit-linear-gradient( -4deg, #bd6638 28%, #da9772 81%, #c09778 100% ) !important;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+  width: 800px;
+  padding: 50px 30px;
+}
+.new-cifra-container label{
+  color: white;
+  font-size: 18px;
 }
