--- a/assets/bootstrap.css
+++ b/assets/bootstrap.css
@@ -161,14 +161,14 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color:#e9aa75;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #e9aa75;
   text-decoration: underline;
 }
 
