--- a/assets/styles.css
+++ b/assets/styles.css
@@ -64,7 +64,7 @@ body {
   width: 200px;
 }
 .form-login{
-  padding: 200px;
+  padding: 100px;
   width: 100%;
   height: 100%;
   display: flex;
@@ -89,4 +89,65 @@ body {
 .new-cifra-container label{
   color: white;
   font-size: 18px;
+}
+.btn-ver-cifra{
+  display: flex;
+  justify-content: center;
+}
+.cifra-table thead{
+  border-radius: 8px;
+}
+.cifras-table td{
+  font-size: 18px;
+  vertical-align: middle !important;
+}
+.cifras-table tr{
+  background-color:#eaac79;
+}
+.cifras-table tr:hover{
+  background-color:#634328 !important;
+  color: white;
+}
+.cifra-list{
+  padding: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cifra-list-container{
+  background-image: -webkit-linear-gradient( -4deg, #bd6638 28%, #da9772 81%, #c09778 100% ) !important;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+  width: 800px;
+  padding: 50px 30px;
+}
+.cifra-details{
+  padding: 100px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.cifra-details-container{
+  background-image: -webkit-linear-gradient( -4deg, #bd6638 28%, #da9772 81%, #c09778 100% ) !important;
+  border-radius: 15px;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.3);
+  width: 800px;
+  padding: 50px 30px;
+}
+.cifra-details-container textarea{
+  width: 90%;
+  border-radius: 10px;
+  border: none;
+  padding: 20px;
+}
+.page-footer {
+    color: #ededed;
+    font-size: 14px;
+    padding: 50px 0 50px 0;
+    background: #634328;
+    overflow: hidden;
 }
